export default class OrderItem {
  private _id: string;
  private _productId: string;
  private _name: string;
  private _price: number;
  private _quantity: number;

  constructor(id: string, name: string, price: number, productId: string, quantity: number) {
    this._id = id;
    this._name = name;
    this._price = price;
    this._productId = productId;
    this._quantity = quantity;
    this.validate();
  }

  get id(): string {
    return this._id;
  }

  get name(): string {
    return this._name;
  }

  get productId(): string {
    return this._productId;
  }

  get quantity(): number {
    return this._quantity;
  }

  get price(): number {
    return this._price * this._quantity;
  }

  get unitPrice(): number {
    return this._price;
  }

  private validate(): void {
    if (this._id.length === 0) {
      throw new Error("OrderItem id is required");
    }
    if (this._name.length === 0) {
      throw new Error("OrderItem name is required");
    }
    if (this._productId.length === 0) {
      throw new Error("OrderItem productId is required");
    }
    if (this._price < 0) {
      throw new Error("OrderItem price must be greater than or equal to zero");
    }
    if (this._quantity <= 0) {
      throw new Error("OrderItem quantity must be greater than zero");
    }
  }
}
